update: modularize eda

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -7,9 +7,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('../src')\n",
+    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import seaborn as sns\n",
+    "from eda import EDA"
    ]
   },
   {
@@ -23,6 +27,16 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "63314bd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eda = EDA()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "c48c92e1",
    "metadata": {},
    "outputs": [
@@ -30,15 +44,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/cm/vngd5r7d2x16wjb2nxg9h5mc0000gn/T/ipykernel_79065/790596984.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  df[\"Date\"] = pd.to_datetime(df[\"Date\"])\n"
+      "/Users/hazel/Desktop/Self Study/kiam8/oil-changepoint-analysis/notebooks/../src/eda.py:14: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df['Date'] = pd.to_datetime(df['Date'])\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../data/BrentOilPrices.csv\")\n",
-    "df[\"Date\"] = pd.to_datetime(df[\"Date\"])\n",
-    "df = df.sort_values(\"Date\")"
+    "df = eda.load_data(\"../data/BrentOilPrices.csv\")"
    ]
   },
   {
@@ -51,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "169cf9a4",
    "metadata": {},
    "outputs": [
@@ -94,17 +106,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9e57759b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"log_return\"] = np.log(df[\"Price\"]).diff()"
+    "df = eda.compute_log_returns(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "9129a343",
    "metadata": {},
    "outputs": [
@@ -136,17 +148,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "c8dce382",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"volatility\"] = df[\"log_return\"].rolling(window=30).std()"
+    "df = eda.compute_rolling_volatility(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7b649d52",
    "metadata": {},
    "outputs": [
@@ -177,6 +189,70 @@
    "metadata": {},
    "source": [
     "Volatility peaks align with geopolitical and economic events, highlighting periods of market stress."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06394faa",
+   "metadata": {},
+   "source": [
+    "### Stationarity Testing (Augmented Dickey-Fuller Test)\n",
+    "\n",
+    "To assess whether the Brent oil price time series is stationary, the Augmented Dickey-Fuller (ADF) test was applied to both the raw price series and the log return series. Stationarity is a key requirement for many time series models, as non-stationary data can lead to spurious results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "68ce2f36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ADF Test for Price\n",
+      "  ADF Statistic: -1.9939\n",
+      "  p-value: 0.2893\n",
+      "  Critical Values: {'1%': np.float64(-3.4310783342658615), '5%': np.float64(-2.861861876398633), '10%': np.float64(-2.566941329781918)}\n",
+      "  => The series is non-stationary\n"
+     ]
+    }
+   ],
+   "source": [
+    "eda.adf_test(df['Price'], col_name='Price')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "836dfc72",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ADF Test for Log Returns\n",
+      "  ADF Statistic: -16.4271\n",
+      "  p-value: 0.0000\n",
+      "  Critical Values: {'1%': np.float64(-3.4310783342658615), '5%': np.float64(-2.861861876398633), '10%': np.float64(-2.566941329781918)}\n",
+      "  => The series is stationary\n"
+     ]
+    }
+   ],
+   "source": [
+    "eda.adf_test(df['log_return'], col_name='Log Returns')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "790162b0",
+   "metadata": {},
+   "source": [
+    "The ADF test results indicate that the raw Brent oil price series is non-stationary, reflecting long-term trends and structural shifts driven by macroeconomic and geopolitical factors. In contrast, the log return series is stationary, with a statistically significant p-value below the 5% threshold. This suggests that price changes, rather than price levels, are more suitable for statistical modeling.\n",
+    "\n",
+    "Based on these results, subsequent change point analysis focuses on log returns and volatility measures, which better capture regime shifts and structural breaks in Brent oil price dynamics."
    ]
   }
  ],
