--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -54,6 +54,85 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8aa41c3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1987-05-20</td>\n",
+       "      <td>18.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1987-05-21</td>\n",
+       "      <td>18.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1987-05-22</td>\n",
+       "      <td>18.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1987-05-25</td>\n",
+       "      <td>18.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1987-05-26</td>\n",
+       "      <td>18.63</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date  Price\n",
+       "0 1987-05-20  18.63\n",
+       "1 1987-05-21  18.45\n",
+       "2 1987-05-22  18.55\n",
+       "3 1987-05-25  18.60\n",
+       "4 1987-05-26  18.63"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c17284f7",
    "metadata": {},
@@ -63,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "169cf9a4",
    "metadata": {},
    "outputs": [
@@ -106,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "9e57759b",
    "metadata": {},
    "outputs": [],
@@ -116,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "9129a343",
    "metadata": {},
    "outputs": [
@@ -148,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c8dce382",
    "metadata": {},
    "outputs": [],
@@ -158,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "7b649d52",
    "metadata": {},
    "outputs": [
@@ -203,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "68ce2f36",
    "metadata": {},
    "outputs": [
@@ -225,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "836dfc72",
    "metadata": {},
    "outputs": [
@@ -253,6 +332,37 @@
     "The ADF test results indicate that the raw Brent oil price series is non-stationary, reflecting long-term trends and structural shifts driven by macroeconomic and geopolitical factors. In contrast, the log return series is stationary, with a statistically significant p-value below the 5% threshold. This suggests that price changes, rather than price levels, are more suitable for statistical modeling.\n",
     "\n",
     "Based on these results, subsequent change point analysis focuses on log returns and volatility measures, which better capture regime shifts and structural breaks in Brent oil price dynamics."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5c18d439",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"../data/processed/brent_oil_prices_processed.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2c9f4189",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[[\"Date\", \"log_return\"]].dropna().to_csv(\n",
+    "    \"../data/processed/brent_log_returns_model.csv\",\n",
+    "    index=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29ca314a",
+   "metadata": {},
+   "source": [
+    "The original Brent oil price dataset contained only dates and prices. All additional variables used in the analysis—log returns and rolling volatility—were derived and stored in an enriched dataset to support reproducibility, modeling, and visualization."
    ]
   }
  ],
